--- a/main-v2-mo.html
+++ b/main-v2-mo.html
@@ -7,6 +7,7 @@
   <title>한경증권-국내</title>
   <link rel="stylesheet" href="https://static.hankyung.com/css/www/m/common.css">
   <link rel="stylesheet" href="css/style-mo.css">
+  <link rel="stylesheet" href="css/style-t.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="//static.hankyung.com/plugin/slick/slick.custom.css">
   <!-- Js -->
@@ -345,13 +346,13 @@
                   </div>
                   <!-- ####### 코스피 탭 #######-->
                   <div class="fiq-cont fiq-cont1">
-                    <div class="graph">
+                    <div class="fiq-graph">
                       <img src="img/pc/graph17.png" alt="">
                     </div>
                   </div>
                   <!-- ####### 코스닥 탭 #######-->
                   <div class="fiq-cont fiq-cont2">
-                    <div class="graph">
+                    <div class="fiq-graph">
                       <img src="img/pc/graph18.png" alt="">
                     </div>
                   </div>
