--- a/page1-mo.html
+++ b/page1-mo.html
@@ -7,6 +7,7 @@
   <title>한경증권-국내</title>
   <link rel="stylesheet" href="https://static.hankyung.com/css/www/m/common.css">
   <link rel="stylesheet" href="css/style-mo.css">
+  <link rel="stylesheet" href="css/style-t.css">
   <link rel="stylesheet" href="//static.hankyung.com/plugin/slick/slick.custom.css">
   <!-- Js -->
   <script src="https://static.hankyung.com/plugin/jquery-3.1.1.min.js"></script>
@@ -772,13 +773,14 @@
             <span class="fiq-d-line"></span>
           </section>
           <section class="fiq-section fiq-sec2">
-            <div class="fiq-tab-wrap fiq-tabs-6n fiq-tab-wrap2 fiq-tab-active1">
+            <div class="fiq-tab-wrap fiq-tabs-6n fiq-tab-wrap2 fiq-tab-active5">
               <a class="fiq-a fiq-tab fiq-tab1">뉴스</a>
               <a class="fiq-a fiq-tab fiq-tab2">차트</a>
               <a class="fiq-a fiq-tab fiq-tab3">시세</a>
               <a class="fiq-a fiq-tab fiq-tab4">구성종목</a>
               <a class="fiq-a fiq-tab fiq-tab5">리포트</a>
-              <a class="fiq-a fiq-tab fiq-tab6">토론</a>
+              <a class="fiq-a fiq-tab fiq-tab6">컨센서스</a>
+              <a class="fiq-a fiq-tab fiq-tab7">토론</a>
             </div>
 
             <!-- ####### 뉴스 탭 #######-->
@@ -872,23 +874,318 @@
             </div>
 
             <!-- ####### 리포트 탭 #######-->
-            <div class="fiq-cont fiq-cont5"></div>
+            <div class="fiq-cont fiq-cont5">
+              <div class="fiq-cell">
+                <ul class="fiq-c5">
+                  <li>
+                    <p style="vertical-align: top;margin-top: 3px;">날짜</p>
+                    <div class="fiq-r">
+                      <div class="fiq-select">
+                        <select>
+                          <option value="">1개월</option>
+                          <option value="">3개월</option>
+                          <option value="">6개월</option>
+                          <option value="">12개월</option>
+                        </select>
+                      </div>
+                      <div class="fiq-date">
+                        <input type="date">
+                      </div>
+                      <span> ~ </span>
+                      <div class="fiq-date">
+                        <input type="date">
+                      </div>
+                    </div>
+                  </li>
+                  <li class="fiq-list1">
+                    <p>종목검색</p>
+                    <div class="fiq-input">
+                      <input type="text" placeholder="코드:종목명">
+                    </div>
+                  </li>
+                  <li class="fiq-list1">
+                    <p>투자의견</p>
+                    <div class="fiq-select">
+                      <select>
+                        <option value="">전체</option>
+                      </select>
+                    </div>
+                  </li>
+                  <li class="fiq-list1">
+                    <p>목표주가<br> 상/하향</p>
+                    <div class="fiq-select">
+                      <select>
+                        <option value="">전체</option>
+                      </select>
+                    </div>
+                  </li>
+                  <li class="fiq-list2">
+                    <div class="fiq-select">
+                      <select>
+                        <option value="">전체</option>
+                      </select>
+                    </div>
+                    <div class="fiq-input">
+                      <input type="text" placeholder="검색어를 입력하세요">
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <a class="fiq-search">검색</a>
+              <div class="fiq-bo-sec">
+                <ul>
+                  <li>
+                    <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                    <div class="fiq-r">
+                      <div class="fiq-top">
+                        <p>삼성전자 <span class="txt-num fiq-code">005930</span><a class="fiq-pop-on">/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                        <ul>
+                          <li class="fiq-up">
+                            <p><span>투자의견</span>매수</p>
+                            <p><span>목표주가</span>10,000(상향)</p>
+                            <p><span>작성자</span>홍길동</p>
+                            <p><span>발행기관</span>미래에셋증권</p>
+                            <p><span>발표일</span>2022-02-08</p>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <a class="fiq-download"></a>
+                  </li>
+                  <li>
+                    <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                    <div class="fiq-r">
+                      <div class="fiq-top">
+                        <p>삼성전자 <span class="txt-num fiq-code">005930</span><a class="fiq-pop-on">/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                        <ul>
+                          <li class="fiq-up">
+                            <p><span>투자의견</span>매수</p>
+                            <p><span>목표주가</span>10,000(상향)</p>
+                            <p><span>작성자</span>홍길동</p>
+                            <p><span>발행기관</span>미래에셋증권</p>
+                            <p><span>발표일</span>2022-02-08</p>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <a class="fiq-download"></a>
+                  </li>
+                  <li>
+                    <div class="fiq-img"><span style="background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
+                    <div class="fiq-r">
+                      <div class="fiq-top">
+                        <p>삼성전자 <span class="txt-num fiq-code">005930</span><a class="fiq-pop-on">/ 동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
+                        <ul>
+                          <li class="fiq-down">
+                            <p><span>투자의견</span>매수</p>
+                            <p><span>목표주가</span>10,000(상향)</p>
+                            <p><span>작성자</span>홍길동</p>
+                            <p><span>발행기관</span>미래에셋증권</p>
+                            <p><span>발표일</span>2022-02-08</p>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <a class="fiq-download"></a>
+                  </li>
+                </ul>
+              </div>
+              <a class="fiq-more">더보기</a>
+            </div>
+
+            <!-- ####### 컨센서스 탭 #######-->
+            <div class="fiq-cont fiq-cont6">
+              <div class="fiq-cell">
+                <h2 class="fiq-h2">컨센서스</h2>
+                <div class="graph" style="font-size:18px;width: 100%; height: 50px;background: #ddd;">그래프들어갈 자리</div>
+                <div class="fiq-table">
+                  <table cellpadding="0" cellspacing="0" border="0" class="fiq-t">
+                    <colgroup>
+                      <col width="50%">
+                      <col width="50%">
+                    </colgroup>
+                    <tbody>
+                    <tr>
+                      <td>종합 투자의견</td>
+                      <td>강력매수</td>
+                    </tr>
+                    <tr>
+                      <td>종합 목표주가</td>
+                      <td>10,000원 <span>YYYY_MM_DD 기준</span></td>
+                    </tr>
+                    <tr>
+                      <td>종가</td>
+                      <td>10,000원 <span>YYYY_MM_DD 기준</span></td>
+                    </tr>
+                    <tr>
+                      <td>전체 발표 횟수</td>
+                      <td>50건</td>
+                    </tr>
+                    <tr>
+                      <td>최근 발표일</td>
+                      <td>YYYY_MM_DD</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <h2 class="fiq-h2">투자의견</h2>
+                <div class="graph" style="font-size:18px;width: 100%; height: 50px;background: #ddd;">그래프들어갈 자리</div>
+                <h2 class="fiq-h2">목표주가</h2>
+                <div class="graph" style="font-size:18px;width: 100%; height: 50px;background: #ddd;">그래프들어갈 자리</div>
+              </div>
+            </div>
 
             <!-- ####### 토론 탭 #######-->
-            <div class="fiq-cont fiq-cont6"></div>
+            <div class="fiq-cont fiq-cont7"></div>
           </section>
         </article>
       </div>
-
-
-
-
-
-
-
-
-
-
+      <div class="fiq-popup">
+        <div class="fiq-dim">
+          <div class="fiq-inner">
+            <div class="fiq-top-tit"><p>삼성전자 <span class="txt-num fiq-code">005930</span></p></div>
+            <p class="fiq-tit">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 동해물과 백두산이 마르고 닳도록 하느님이 보우하사</p>
+            <div class="graph">
+              <img src="/img/mo/graph3.png" alt="" style="width: 100%;height: 100%;display: inline-block;">
+            </div>
+            <ul class="fiq-up">
+              <li>
+                <p>상장시장</p>
+                <p>유가증권</p>
+              </li>
+              <li>
+                <p>업종</p>
+                <p>전기전자</p>
+              </li>
+              <li>
+                <p>투자의견</p>
+                <p>매수</p>
+              </li>
+              <li>
+                <p>목표주가</p>
+                <p>10,000원(상향)</p>
+              </li>
+              <li>
+                <p>작성자</p>
+                <p>홍길동</p>
+              </li>
+              <li>
+                <p>발행기관</p>
+                <p>미래에셋증권</p>
+              </li>
+              <li>
+                <p>발표일</p>
+                <p>YYYY-MM-DD</p>
+              </li>
+              <li>
+                <p>다운로드</p>
+                <p><a></a></p>
+              </li>
+            </ul>
+            <h2 class="fiq-h2">레포트 주요내용</h2>
+            <p class="fiq-txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos.</p>
+            <a class="fiq-close"><span></span></a>
+          </div>
+        </div>
+      </div>
+      <div class="fiq-search-popup">
+        <div class="fiq-dim"></div>
+        <div class="fiq-pop-inner">
+          <div class="fiq-top">
+            <input type="text">
+            <a class="fiq-a">검색</a>
+          </div>
+          <div class="fiq-search-cont">
+            <div class="fiq-h">
+              <p>종목(산업/발행) 코드</p>
+              <p>종목(산업/발행기관) 명</p>
+            </div>
+            <div class="fiq-table-wrap">
+              <table cellpadding="0" cellspacing="0" border="0" class="fiq-t">
+                <colgroup>
+                  <col width="50%">
+                  <col width="50%">
+                </colgroup>
+                <tbody>
+                <tr>
+                  <td class="txt-num">005380</td>
+                  <td>현대차</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005360</td>
+                  <td>모나미</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005390</td>
+                  <td>신성통상</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005320</td>
+                  <td>국동</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005300</td>
+                  <td>롯데칠성</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005385</td>
+                  <td>현대차우</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005387</td>
+                  <td>현대차2우B</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005389</td>
+                  <td>현대차3우B</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005305</td>
+                  <td>롯데칠성우</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005380</td>
+                  <td>현대차</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005360</td>
+                  <td>모나미</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005390</td>
+                  <td>신성통상</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005320</td>
+                  <td>국동</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005300</td>
+                  <td>롯데칠성</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005385</td>
+                  <td>현대차우</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005387</td>
+                  <td>현대차2우B</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005389</td>
+                  <td>현대차3우B</td>
+                </tr>
+                <tr>
+                  <td class="txt-num">005305</td>
+                  <td>롯데칠성우</td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <a class="fiq-a fiq-list-view">목록</a>
+        </div>
+      </div>
       <!-- // **********외주 콘텐츠 작업 영역********** -->
     </div>
   </div>
@@ -1056,5 +1353,27 @@
 </div>
 <script src="js/fiq-polyfill.js"></script>
 <script src="js/fiq-common-mo.js"></script>
+<script>
+  let popOpen = document.querySelectorAll('.fiq-pop-on');
+  let popup = document.querySelector('.fiq-popup');
+  let close = popup.querySelector('.fiq-close');
+  Array.prototype.forEach.call(popOpen, function(e) {
+    e.addEventListener('click', function() {
+      popup.classList.add('fiq-open');
+    })
+  });
+  close.addEventListener('click', function() {
+    popup.classList.remove('fiq-open');
+  });
+  let fiqSearch = document.querySelector('.fiq-search');
+  let searchPop = document.querySelector('.fiq-search-popup');
+  let searchPopClose = document.querySelector('.fiq-list-view');
+  fiqSearch.addEventListener('click', function() {
+    searchPop.classList.add('fiq-open');
+  });
+  searchPopClose.addEventListener('click', function() {
+    searchPop.classList.remove('fiq-open');
+  })
+</script>
 </body>
 </html>
