--- a/page5-mo.html
+++ b/page5-mo.html
@@ -7,6 +7,7 @@
   <title>한경증권-국내</title>
   <link rel="stylesheet" href="https://static.hankyung.com/css/www/m/common.css">
   <link rel="stylesheet" href="css/style-mo.css">
+  <link rel="stylesheet" href="css/style-t.css">
   <link rel="stylesheet" href="//static.hankyung.com/plugin/slick/slick.custom.css">
   <!-- Js -->
   <script src="https://static.hankyung.com/plugin/jquery-3.1.1.min.js"></script>
