--- a/index-newly.html
+++ b/index-newly.html
@@ -22,10 +22,16 @@
       <th><a href="http://hankyungkr.devcraft.kr/page2-1-newly-pc.html" target="_blank">2.주요시세</a></th>
     </tr>
     <tr>
+      <th><a href="http://hankyungkr.devcraft.kr/page13-newly-pc.html" target="_blank">13.컨센서스</a></th>
+    </tr>
+    <tr>
       <th colspan="2" style="font-size:25px; height:45px; text-align: center;">MOBILE</th>
     </tr>
     <tr>
       <th><a href="http://hankyungkr.devcraft.kr/page1-newly-mo.html" target="_blank">M2.시장종합</a></th>
+    </tr>
+    <tr>
+      <th><a href="http://hankyungkr.devcraft.kr/page19-newly-mo.html" target="_blank">M13.컨센서스</a></th>
     </tr>
   </table>
 </body>
