--- a/page13-newly-pc.html
+++ b/page13-newly-pc.html
@@ -350,7 +350,20 @@
                         <ul>
                           <li class="fiq-up">
                             <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-                            <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                            <p>
+                              <span>목표주가</span>10,000
+                              <span class="fiq-indi fiq-up"></span>
+                            </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
+
+
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -366,7 +379,18 @@
                         <ul>
                           <li>
                             <p><span>투자의견</span> <span class="fiq-s">보유</span></p>
-                            <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                            <p>
+                              <span>목표주가</span>10,000
+                              <span class="fiq-indi fiq-down"></span>
+                            </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -382,7 +406,18 @@
                         <ul>
                           <li class="fiq-down">
                             <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                            <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                            <p>
+                              <span>목표주가</span>10,000
+                              <span class="fiq-indi fiq-up"></span>
+                            </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -398,7 +433,17 @@
                         <ul>
                           <li class="fiq-down">
                             <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                            <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                            <p>
+                              <span>목표주가</span>10,000
+                              <span class="fiq-indi fiq-down"></span>
+                            </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -414,7 +459,24 @@
                         <ul>
                           <li class="fiq-down">
                             <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                            <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                            <p>
+                              <span>목표주가</span>10,000
+                              <span class="fiq-indi"></span>
+                            </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
+
+
+
+
+
+
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -507,7 +569,17 @@
                     <ul>
                       <li class="fiq-up">
                         <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-                        <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                        <p>
+                          <span>목표주가</span>10,000
+                          <span class="fiq-indi fiq-up"></span>
+                        </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
                         <p><span>작성자</span>홍길동</p>
                         <p><span>발행기관</span>미래에셋증권</p>
                         <p><span>발표일</span>2022-02-08</p>
@@ -528,7 +600,18 @@
                     <ul>
                       <li class="fiq-stay">
                         <p><span>투자의견</span> <span class="fiq-s">보유</span></p>
-                        <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                        <p>
+                          <span>목표주가</span>10,000
+                          <span class="fiq-indi fiq-down"></span>
+                        </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
+
                         <p><span>작성자</span>홍길동</p>
                         <p><span>발행기관</span>미래에셋증권</p>
                         <p><span>발표일</span>2022-02-08</p>
@@ -602,19 +685,29 @@
                       </tr>
                       </thead>
                       <tbody>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
                       <!--##### fiq-up이면 상승-->
                       <!--##### fiq-down이면 하락-->
                       <!--##### fiq-stay이면 유지-->
-                      <tr class="fiq-up">
+                      <tr>
                         <td>유가증권</td>
                         <td>전기전자</td>
-                        <td>매수</td>
-                        <td>10,000원(상향)</td>
+                        <td class="fiq-up">매수</td>
+                        <td class="fiq-down">10,000원(상향)</td>
                         <td>홍길동</td>
                         <td>미래에셋증궈</td>
                         <td>YYYY-MM-DD</td>
                         <td><a></a></td>
                       </tr>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
+
+
                       </tbody>
                     </table>
                   </div>
