--- a/page19-newly-mo.html
+++ b/page19-newly-mo.html
@@ -42,7 +42,7 @@
 
   <!-- Container -->
   <div id="container" class="fiq-container"> <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
-    <span class="inner">
+    <div class="inner">
       <!-- **********외주 콘텐츠 작업 영역********** -->
 
       <div class="fiq-wrap fiq-newly">
@@ -66,7 +66,18 @@
                       <ul>
                         <li class="fiq-up">
                           <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                          <p>
+                            <span>목표주가</span>10,000
+                            <span class="fiq-indi fiq-down"></span>
+                          </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -82,7 +93,18 @@
                       <ul>
                         <li>
                           <p><span>투자의견</span> <span class="fiq-s">유지</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                          <p>
+                            <span>목표주가</span>10,000
+                            <span class="fiq-indi"></span>
+                          </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -98,7 +120,17 @@
                       <ul>
                         <li class="fiq-down">
                           <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                          <p>
+                            <span>목표주가</span>10,000
+                            <span class="fiq-indi fiq-up"></span>
+                          </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -333,7 +365,21 @@
                       <ul>
                         <li class="fiq-up">
                           <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                          <p>
+                            <span>목표주가</span>10,000
+                            <span class="fiq-indi fiq-down"></span>
+                          </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
+
+
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                           <p><span>발표일</span>2022-02-08</p>
@@ -351,7 +397,18 @@
                       <ul>
                         <li>
                           <p><span>투자의견</span> <span class="fiq-s">유지</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+                          <p>
+                            <span>목표주가</span>10,000
+                            <span class="fiq-indi fiq-down"></span>
+                          </p>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                           <p><span>발표일</span>2022-02-08</p>
@@ -465,7 +522,14 @@
             <div class="graph">
               <img src="/img/mo/graph3.png" alt="" style="width: 100%;height: 100%;display: inline-block;">
             </div>
-            <ul class="fiq-up">
+
+
+
+<!-- ####################### 3.14 수정 #########################-->
+            <!--##### p태그에 fiq-up이면 상승-->
+            <!--##### p태그에 fiq-down이면 하락-->
+            <!--##### p태그에 fiq-stay이면 유지-->
+            <ul>
               <li>
                 <p>상장시장</p>
                 <p>유가증권</p>
@@ -476,11 +540,11 @@
               </li>
               <li>
                 <p>투자의견</p>
-                <p>매수</p>
+                <p class="fiq-up">매수</p>
               </li>
               <li>
                 <p>목표주가</p>
-                <p>10,000원(상향)</p>
+                <p class="fiq-down">10,000원(상향)</p>
               </li>
               <li>
                 <p>작성자</p>
@@ -499,6 +563,10 @@
                 <p><a></a></p>
               </li>
             </ul>
+<!-- ####################### 3.14 수정 끝#########################-->
+
+
+
             <h2 class="fiq-h2">레포트 주요내용</h2>
             <p class="fiq-txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos.</p>
             <a class="fiq-close"><span></span></a>
